# LearnRust

./: .gitignore  README.md
actix_web_000/.devcontainer/: devcontainer.json
holamundo/: README.md
holamundo/.devcontainer/: devcontainer.json
holamundo/src/: main.rs
in_docker/: Dockerfile  README.md
learn_000_holamundo/src/: bucles.rs
learn_001_salvo_tutorial/public/: index.html
learn_001_salvo_tutorial/src/: main.rs
learn_001_salvo_tutorial_client/: README.md
learn_002_in_docker/: DockerfileSimple  README.md
learn_002_in_docker/docker/: DockerfileAlpine
learn_003_actix_web_000/: README.md
learn_003_actix_web_000/actix_web_example/: Cargo.toml
learn_004_rust_by_example/: Cargo.toml  README.md
learn_004_rust_by_example/.devcontainer/: devcontainer.json
learn_005_rust_essentials_book/: Cargo.toml  README.md
learn_005_rust_essentials_book/src/cap04/: main.rs
learn_005_rust_essentials_book/src/cap05/: main.rs
learn_005_rust_essentials_book/src/cap06/: memory.rs
learn_006_rust_lang_org/: Cargo.toml  README.md
learn_006_rust_lang_org/src/: main.rs
learn_006_rust_lang_org/src/cap01/: main.rs
learn_006_rust_lang_org/src/cap02/: main.rs
learn_006_rust_lang_org/src/cap03/: main.rs
learn_006_rust_lang_org/src/cap04/: main.rs
learn_006_rust_lang_org/src/cap05/: main.rs
learn_006_rust_lang_org/src/cap06/: main.rs
learn_006_rust_lang_org/src/cap08/: main.rs
learn_006_rust_lang_org/src/cap09/: main.rs
learn_007_actix_web_001/: Cargo.toml  README.md
learn_007_actix_web_001/src/: config.rs  lib.rs  main.rs  state.rs
learn_008_actix_web_002/: Cargo.toml  Dockerfile  README.md  reqs.http
learn_008_actix_web_002/.devcontainer/: devcontainer.json
learn_008_actix_web_002/src/: health.rs  main.rs  repository.rs  user.rs
learn_008_actix_web_002/src/v1/: mod.rs  users.rs
learn_009_diesel_000/: .env  Cargo.toml  README.md  diesel.toml
learn_009_diesel_000/.devcontainer/: docker-compose.yml
learn_010_diesel_001/: .env  Cargo.toml  README.md
learn_010_diesel_001/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
learn_010_diesel_001/init/: creates.sql
learn_011_rust_ls/: Cargo.toml  README.md
learn_011_rust_ls/src/: args.rs  file.rs  list.rs  main.rs  owners.rs  permisos.rs
learn_012_rust_book/: Cargo.toml  Dockerfile  Dockerfile-revisar  README.md
learn_012_rust_book/src/: lib.rs  main.rs
learn_013_polars_dataframes/: Cargo.toml  Dockerfile  Dockerfile.alpine  Readme.md
learn_013_polars_dataframes/src/: main.rs
learn_014_hexagonal_arq_001/: Cargo.toml  Makefile  README.md
learn_014_hexagonal_arq_001/src/: main.rs
learn_015_amux_001/: Cargo.toml  README.md
learn_015_amux_001/src/: error.rs  main.rs  model.rs
learn_016_actix_web_003/: .env  Cargo.toml  Dockerfile  DockerfileScratch  README.md
learn_016_actix_web_003/src/: config.rs  main.rs
learn_017_google_comprehensive_rust/: Cargo.toml  README.md
learn_017_google_comprehensive_rust/src/day01/: main.rs
learn_017_google_comprehensive_rust/src/day01/ejer_m/: main.rs
learn_017_google_comprehensive_rust/src/day01t/: main.rs
learn_017_google_comprehensive_rust/src/day01t/ejer_t/: main.rs
learn_018_ficheros/ficheros/: Cargo.toml
learn_018_ficheros/ficheros/src/creacion_ficheros/: creacion_archivo.rs  escribir_archivo.rs  modo_append.rs
learn_019_read_csv/: README.md  nombres.csv
learn_019_read_csv/csv-work/: Cargo.toml  DockerfileScratch
learn_019_read_csv/input/: nombres.csv
learn_020_read_json/: Dockerfile  README.md
learn_020_read_json/json-work/: Cargo.toml
learn_021_write_json/: README.md
learn_021_write_json/json-write/: Cargo.toml  DockerfileScratch
learn_022_actix_web_004/: DockerfileSurrealdb  README.md
learn_022_actix_web_004/rust_backend/: Cargo.toml  Dockerfile
learn_023_plus_python/: README.md
learn_023_plus_python/.devcontainer/: Dockerfile  devcontainer.json
learn_023_plus_python/word_counter/: Cargo.toml
learn_024_postgres_sqlx/.devcontainer/: devcontainer.json
learn_024_postgres_sqlx/biblioteca/: Cargo.toml
learn_025_arquitectura_hexagonal_pokedex/: Cargo.toml  README.md
learn_026_todo_swagger/: README.md
learn_026_todo_swagger/.devcontainer/: Dockerfile  devcontainer.json
learn_026_todo_swagger/todo-rust/: Cargo.toml
learn_026_todo_swagger/todo-rust/src/: main.rs  swager.rs
learn_026_todo_swagger/todo-rust/src/domain/: mod.rs  newtodo.rs  state.rs  todo.rs
learn_026_todo_swagger/todo-rust/src/in_memory/: create_todo.rs  delete_todo.rs  get_todos.rs  mod.rs  routes.rs  update_todo.rs
learn_027_tutorial_leptos/: README.md
learn_027_tutorial_leptos/.devcontainer/: Dockerfile  devcontainer.json
learn_027_tutorial_leptos/leptos-tutorial/: index.html
learn_028_profiling_001/: README.md
learn_028_profiling_001/.devcontainer/: devcontainer.json
learn_028_profiling_001/profiling_example/: Cargo.toml  dhat-heap.json  profile.json
learn_028_profiling_001/profiling_example/src/: main.rs  main_dhat.rs
learn_029_polars_ds_salaies/: Cargo.toml  README.md
learn_029_polars_ds_salaies/.devcontainer/: devcontainer.json
learn_029_polars_ds_salaies/src/: main.rs  main_manual.rs
learn_030_rust_react_001/: README.md
learn_030_rust_react_001/.devcontainer/: devcontainer.json
learn_030_rust_react_001/todo_backend/: Cargo.toml
learn_030_rust_react_001/todo_backend/src/: main.rs
learn_030_rust_react_001/todo_front/: package.json
learn_031_slint_000/: Cargo.toml
learn_031_slint_000/.devcontainer/: devcontainer.json
learn_032_dioxus_000/: Cargo.toml  Dioxus.toml
learn_036_basic_actors/: Cargo.toml  README.md
learn_24_postgres_sqlx/: README.md
play_with_rust/: Cargo.toml
salvo_tutorial/: Cargo.toml
salvo_tutorial/.devcontainer/: devcontainer.json
salvo_tutorial/public/: main.css  main.js
salvo_tutorial/src/: main.rs
template_devcontainer_rust_mysql/: README.md
template_devcontainer_rust_postgres/: README.md
template_devcontainer_rust_slint/: Cargo.toml
template_multimodulo_dependencias_visibilidad/: Cargo.toml  Dockerfile
(+82 files in other folders)
