[package]
name = "learn_005_rust_essentials_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num-traits = "0.2.15"

[[bin]]
name = "cap04"
path = "src/cap04/main.rs"

[[bin]]
name = "cap05"
path = "src/cap05/main.rs"

[[bin]]
name = "cap06"
path = "src/cap06/memory.rs"
