[package]
name = "learn_006_rust_lang_org"
version = "0.1.0"
edition = "2021"
authors = ["david"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
colored="2.0.0"
log = "0.4.16"
env_logger ="0.10.0"

# cargo run --bin cap01
[[bin]]
name = "cap01"
path = "src/cap01/main.rs"

[[bin]]
name = "cap02"
path = "src/cap02/main.rs"

[[bin]]
name = "cap03"
path = "src/cap03/main.rs"

[[bin]]
name = "cap04"
path = "src/cap04/main.rs"

[[bin]]
name = "cap05"
path = "src/cap05/main.rs"

[[bin]]
name = "cap06"
path = "src/cap06/main.rs"
