[package]
name = "learn_008_actix_web_002"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7.0"
log = "0.4.16"
env_logger = "0.10.0"
dotenv = "0.15.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
