[package]
name = "learn_013_polars_dataframes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.44.2", features = ["lazy", "dtype-full"] }
polars-core = "0.44.2"


[dev-dependencies]


[[bin]]
path = "src/main.rs"
name = "learn_013_polars_dataframes"
