[package]
name = "learn_013_polars_dataframes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.44.2", features = ["lazy", "dtype-full"] }
polars-core = "0.44.2"
dhat = "0.3.2"
pprof = { version = "0.14", features = ["flamegraph"] }

[profile.release]
debug = 1

[features]
dhat-heap = []

[dev-dependencies]


[[bin]]
path = "src/main.rs"
name = "learn_013_polars_dataframes"
