[package]
name = "learn_016_actix_web_003"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
# logs
env_logger ="0.10.0"
log = "0.4.16"
# variables entorno
dotenv = "0.15.0"
# serializador
serde ={ version = "1.0.104", features = ["derive"]}
