[package]
name = "learn_017_google_comprehensive_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# cargo run --bin day01
[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "ejer01m"
path = "src/day01/ejer_m/main.rs"

[[bin]]
name = "day01t"
path = "src/day01t/main.rs"

[[bin]]
name = "ejer01t"
path = "src/day01t/ejer_t/main.rs"