[package]
name = "learn_029_polars_ds_salaies"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
serde = "1.0.215"
polars = { version = "0.44.2", features = ["lazy", "dtype-full"] }
polars-core = "0.44.2"
polars-io = "0.44.2"

dhat = "0.3.2"
pprof = { version = "0.14", features = ["flamegraph"] }


[profile.release]
debug = 1

[features]
dhat-heap = []

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main_manual"
path = "src/main_manual.rs"
