[package]
name = "salvo_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "*", features = ["serve-static"] }
tokio = { version = "1", features = ["macros"] }
# https://salvo.rs/book/middlewares/serve-static.html#config-cargo-toml
rust-embed="6.4.2"
