[package]
name = "todo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
axum = { version = "0.6.0", features = ["tokio", "http1"] }
tower-http = { version = "0.5.0", features = ["cors"] }
utoipa = { version = "3.0.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
simple_logger = "4.3.3"
log = "0.4.21"
time = { version = "0.3.36", features = ["formatting"] }
