[package]
name = "profiling_example"
version = "0.1.0"
edition = "2021"

[dependencies]
dhat = "0.3.2"
pprof = { version = "0.14", features = ["flamegraph"] }

[profile.release]
debug = 1

[features]
dhat-heap = []

[[bin]]
name = "profiling_ppref"
path = "src/main.rs"
[[bin]]
name = "profiling_dhat"
path = "src/main_dhat.rs"
