[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.16", features = ["macros"] }
tower-http = { version = "0.4", features = ["fs", "cors"] }
tower-cookies = "0.9"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.12.0", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }

hyper = "0.14"
